<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


    <TextView
            android:id="@+id/receive_token_status_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/receive_token_token_status_label"
            />

    <TextView
            android:id="@+id/receive_token_status"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text=""
            />

    <TextView
            android:id="@+id/receive_token_error_description_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/receive_token_error_description_label"
            />

    <EditText
            android:id="@+id/receive_token_error_description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:editable="false"
            android:inputType="none"
            />

    <TextView
            android:id="@+id/receive_token_error_uri_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/receive_token_error_uri_label"
            />
    <Button android:id="@+id/receive_token_error_uri_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/receive_token_error_uri_button"
            />

</LinearLayout>